--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@ footer {
 
 </style>
 
+<body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
             <a class="navbar-brand" href="#">Jegybazár</a>
