--- a/esemenyek.html
+++ b/esemenyek.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <head>
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
@@ -10,108 +10,157 @@
 
     <!-- Bootstrap core CSS -->
     <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-
     <!-- Custom styles for this template -->
     <link href="css/style.css" rel="stylesheet">
-  </head>
-<style>
 
-.card_text{
-    min-height: 4em;
-}
+</head>
 
-.card-deck{
-    margin-bottom:10em;
-}
+<!-- body -->
+<body>
 
-footer {
-  position: absolute;
-  width: 100%;
-  height: 60px;
-  background-color: #f5f5f5;
-}
-
-</style>
-
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-
-      <div class="container">
-
+<!-- navbar -->
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container">
         <a class="navbar-brand" href="#">Jegybazár</a>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-toggle="collapse"
+                data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup"
+                aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav ml-auto">
-              <a class="nav-item nav-link" href="index.html">Home</a>
-              <a class="nav-item nav-link active" href="esemenyek.html">Események<span class="sr-only">(current)</span></a>
-              <a class="nav-item nav-link" href="jegyek.html">Jegyek</a>
-              <a class="nav-item nav-link" href="rolunk.html">Rólunk</a>
-              <a class="nav-item nav-link" href="belepes.html">Belépés</a>
+                <a class="nav-item nav-link" href="index.html">Home</a>
+                <a class="nav-item nav-link active" href="esemenyek.html">Események<span
+                        class="sr-only">(current)</span></a>
+                <a class="nav-item nav-link" href="jegyek.html">Jegyek</a>
+                <a class="nav-item nav-link" href="rolunk.html">Rólunk</a>
+                <a class="nav-item nav-link" href="belepes.html">Belépés</a>
             </div>
-          </div>
         </div>
-
-    </nav>
-
-    <div class="jumbotron">
-      <div class="container text-center">
-        <h1 class="display-3">Események</h1>
-        <p class="lead">Itt találod az események táblázatát. Ha érdekel egy, akkor innen azonnal tovább tudsz ugrani a jegyvásárlásra. Jó szórakozást.</p>
-      </div>
+        <form class="form-inline ml-3">
+            <a href="regisztracio.html" class="btn btn-sm align-middle btn-primary"
+               role="button">Regisztráció</a>
+        </form>
     </div>
+</nav>
 
+<!-- jumbotron -->
+
+<div class="jumbotron py-5">
+    <div class="container text-center">
+        <h1 class="display-4 mb-4">Események</h1>
+        <p class="lead">Használd a Jegybazárt és csereberélj jegyeket a legjobb bulikra.
+            Elfogyott? Az orrod elől vitték el az utolsót? Ne aggódj, irány a
+            JegyBazár!</p>
+    </div>
+</div>
+<!-- cards -->
 
 <div class="container">
 
-  <div class="card-deck pt-5">
+    <div class="card-deck pt-5 pb-5">
 
         <div class="card">
-          <img class="card-img-top" src="img/sziget.png" alt="Card image cap">
-          <div class="card-body">
-            <h4 class="card-title">Sziget Fesztivál</h4>
-            <p class="card_text card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo.</p>
-            <p class="card-text"><small class="text-muted">2017-08-03</small></p>
-            <a href="#" class="row justify-content-end pr-4">Tovább</a>
-          </div>
+            <img class="card-img-top" src="img/sziget.png" alt="Card image cap">
+            <div class="card-body">
+                <h4 class="card-title">Sziget Fesztivál</h4>
+                <p class="card_text card-text">Lorem ipsum dolor sit amet consectetur
+                    adipisicing elit. Quo.</p>
+                <p class="card-text">
+                    <small class="text-muted">2017-08-03</small>
+                </p>
+                <a href="#" class="row justify-content-end pr-4">Tovább</a>
+            </div>
         </div>
 
         <div class="card">
-          <img class="card-img-top" src="img/diotoro.jpg" alt="Card image cap">
-          <div class="card-body">
-            <h4 class="card-title">Diótörő Balett</h4>
-            <p class="card_text card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
-            <p class="card-text"><small class="text-muted">2017-11-23</small></p>
-            <a href="#" class="row justify-content-end pr-4">Tovább</a>
-          </div>
+            <img class="card-img-top" src="img/diotoro.jpg" alt="Card image cap">
+            <div class="card-body">
+                <h4 class="card-title">Diótörő Balett</h4>
+                <p class="card_text card-text">Lorem, ipsum dolor sit amet consectetur
+                    adipisicing elit.</p>
+                <p class="card-text">
+                    <small class="text-muted">2017-11-23</small>
+                </p>
+                <a href="#" class="row justify-content-end pr-4">Tovább</a>
+            </div>
         </div>
 
         <div class="card">
-          <img class="card-img-top" src="img/macskak.jpg" alt="Card image cap">
-          <div class="card-body">
-            <h4 class="card-title">Macskák Musical</h4>
-            <p class="card_text card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis, necessitatibus.</p>
-            <p class="card-text"><small class="text-muted">2018-02-11</small></p>
-            <a href="#" class="row justify-content-end pr-4">Tovább</a>
-          </div>
+            <img class="card-img-top" src="img/macskak.jpg" alt="Card image cap">
+            <div class="card-body">
+                <h4 class="card-title">Macskák Musical</h4>
+                <p class="card_text card-text">Lorem ipsum dolor sit amet consectetur
+                    adipisicing elit. Facilis, necessitatibus.</p>
+                <p class="card-text">
+                    <small class="text-muted">2018-02-11</small>
+                </p>
+                <a href="#" class="row justify-content-end pr-4">Tovább</a>
+            </div>
         </div>
-  </div>
+
+    </div>
+
+    <div class="card-deck pt-5 pb-5">
+
+        <div class="card">
+            <img class="card-img-top" src="img/sziget.png" alt="Card image cap">
+            <div class="card-body">
+                <h4 class="card-title">Sziget Fesztivál</h4>
+                <p class="card_text card-text">Lorem ipsum dolor sit amet consectetur
+                    adipisicing elit. Quo.</p>
+                <p class="card-text">
+                    <small class="text-muted">2017-08-03</small>
+                </p>
+                <a href="#" class="row justify-content-end pr-4">Tovább</a>
+            </div>
+        </div>
+
+        <div class="card">
+            <img class="card-img-top" src="img/diotoro.jpg" alt="Card image cap">
+            <div class="card-body">
+                <h4 class="card-title">Diótörő Balett</h4>
+                <p class="card_text card-text">Lorem, ipsum dolor sit amet consectetur
+                    adipisicing elit.</p>
+                <p class="card-text">
+                    <small class="text-muted">2017-11-23</small>
+                </p>
+                <a href="#" class="row justify-content-end pr-4">Tovább</a>
+            </div>
+        </div>
+
+        <div class="card">
+            <img class="card-img-top" src="img/macskak.jpg" alt="Card image cap">
+            <div class="card-body">
+                <h4 class="card-title">Macskák Musical</h4>
+                <p class="card_text card-text">Lorem ipsum dolor sit amet consectetur
+                    adipisicing elit. Facilis, necessitatibus.</p>
+                <p class="card-text">
+                    <small class="text-muted">2018-02-11</small>
+                </p>
+                <a href="#" class="row justify-content-end pr-4">Tovább</a>
+            </div>
+        </div>
+
+    </div>
+
 </div>
+<!-- container end -->
+
+<!-- footer -->
 
 <footer class="bg-light text-center py-3 mt-4 sticky-bottom">
     <div class="container">
-      <p class="m-0">&copy; Company 2017</p>
+        <p class="m-0">&copy; Company 2017</p>
     </div>
-  </footer> 
+</footer>
 
-      
-      
 
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="lib/jquery-3.2.1.slim.min.js"></script>
-    <script src="lib/popper.min.js"></script>
-    <script src="lib/bootstrap/js/bootstrap.min.js"></script>
-  </body>
+<!-- Bootstrap core JavaScript
+================================================== -->
+<!-- Placed at the end of the document so the pages load faster -->
+<script src="lib/jquery-3.2.1.slim.min.js"></script>
+<script src="lib/popper.min.js"></script>
+<script src="lib/bootstrap/js/bootstrap.min.js"></script>
+</body>
 </html>
