sitebuld++ * modositasok es javitasok * uj oldalak ** 404 ** profil ** profil_mod ** newticket ** ujesemeny ** licit_adat * img-ek

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head>
+  <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
@@ -8,129 +8,114 @@
 
     <title>újJegyBazár</title>
 
-    <!-- Bootstrap core CSS -->
+<!-- Bootstrap core CSS -->
     <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Custom styles for this template -->
-    <link href="css/style.css" rel="stylesheet">
-
+ <!-- Custom styles for this template -->
+ <link href="css/style.css" rel="stylesheet">
+ 
 </head>
-<!-- body -->
-<body>
+    <!-- body -->
+    <body>
+        <div class="content-container">
 
-<!-- navbar -->
+    <!-- navbar --> 
 
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container">
-        <a class="navbar-brand" href="#">Jegybazár</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse"
-                data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup"
-                aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav ml-auto">
-                <a class="nav-item nav-link active" href="index.html">Home <span
-                        class="sr-only">(current)</span></a>
-                <a class="nav-item nav-link" href="esemenyek.html">Események</a>
-                <a class="nav-item nav-link" href="jegyek.html">Jegyek</a>
-                <a class="nav-item nav-link" href="rolunk.html">Rólunk</a>
-                <a class="nav-item nav-link" href="belepes.html">Belépés</a>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container">
+                <a class="navbar-brand" href="#">Jegybazár</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                    <div class="navbar-nav ml-auto">
+                        <a class="nav-item nav-link active" href="index.html">Home</a>
+                        <a class="nav-item nav-link" href="esemenyek.html">Események</a>
+                        <a class="nav-item nav-link" href="jegyek.html">Jegyek</a>
+                        <a class="nav-item nav-link" href="rolunk.html">Rólunk</a>
+                        <a class="nav-item nav-link" href="belepes.html">Belépés</a>
+                        <a href="regisztracio.html" class="nav-item nav-link btn btn-primary text-light ml-lg-2 btn-sm">Regisztráció</a>
+                    </div>
+                </div>
             </div>
-        </div>
-        <form class="form-inline ml-3">
-            <a href="regisztracio.html" class="btn btn-sm align-middle btn-primary"
-               role="button">Regisztráció</a>
-        </form>
-    </div>
-</nav>
+        </nav>
+    <!-- navbar end --> 
 
-<!-- jumbotron -->
+    <!-- jumbotron --> 
 
-<div class="jumbotron py-5">
-    <div class="container text-center">
-        <h1 class="display-4 mb-4">Jegyek bárkitől, bárhol, bármikor!</h1>
-        <p class="lead">Használd a Jegybazárt és csereberélj jegyeket a legjobb bulikra.
-            Elfogyott? Az orrod elől vitték el az utolsót? Ne aggódj, irány a
-            JegyBazár!</p>
-        <p class="lead">
-            <a class="btn btn-primary btn-lg mt-4 mb-0" href="#" role="button">Nézzük az
-                eseményeket!</a>
-        </p>
-    </div>
-</div>
-
-<!-- cards -->
-
-<div class="container">
-
-    <div class="card-deck pt-5">
-
-        <div class="col col-md-6 col-lg-4">
-            <div class="index_card text-center">
-                <div class="row justify-content-center">
-                    <img class="card-img-top img-fluid calendar" src="img/calendar.png"
-                         alt="Card image cap">
-                </div>
-                <div class="card-body">
-                    <h4 class="card-title text-center">Események</h4>
-                    <p class="index_text card-text">Itt találod a legtöbb jó bulit,
-                        böngéssz bátran és keress vagy adj el jegyeket a barátaidnak, vagy
-                        más felhasználóknak.</p>
-                    <a href="#" class="btn btn-primary index_btn_card">Események</a>
-                </div>
+        <div class="jumbotron py-5">
+            <div class="container text-center">
+                <h1 class="display-4 mb-4">Jegyek bárkitől, bárhol, bármikor!</h1>
+                    <p class="lead">Használd a Jegybazárt és csereberélj jegyeket a legjobb bulikra. Elfogyott? Az orrod elől vitték el az utolsót? Ne aggódj, irány a JegyBazár!</p>
+                    <p class="lead">
+                        <a class="btn btn-primary btn-lg mt-4 mb-0" href="#" role="button">Nézzük az eseményeket!</a>
+                    </p>
             </div>
         </div>
 
-        <div class="col col-md-6 col-lg-4">
-            <div class="index_card text-center">
-                <div class="row justify-content-center">
-                    <img class="card-img-top img-fluid calendar" src="img/ticket.png"
-                         alt="Card image cap">
-                </div>
-                <div class="card-body">
-                    <h4 class="card-title text-center">Jegyek</h4>
-                    <p class="index_text card-text">Ha sietsz, egyből kezdheted a jegyek
-                        böngészésével is. Itt is tudsz keresni az esemény neve vagy
-                        időpontja alapján.</p>
-                    <a href="#" class="btn btn-primary index_btn_card">Jegyek</a>
-                </div>
-            </div>
-        </div>
+    <!-- cards --> 
 
-        <div class="col col-md-8 mx-md-auto col-lg-4">
-            <div class="index_card text-center col">
-                <div class="row justify-content-center">
-                    <img class="card-img-top img-fluid calendar" src="img/user.png"
-                         alt="Card image cap">
-                </div>
-                <div class="card-body">
-                    <h4 class="card-title">Regisztráció</h4>
-                    <p class="index_text card-text">Még nem regisztráltál? Akkor gyorsan
-                        tedd meg, mert a szolgáltatás csak tagonkak elérhető. Sőt, az újak
-                        értékes ajándékot kapnak tőlünk.</p>
-                    <a href="regisztracio.html" class="btn btn-primary index_btn_card">Regisztráció</a>
-                </div>
-            </div>
-        </div>
+        <div class="container">
 
+            <div class="card-deck pt-5">
+
+                <div class="col col-md-6 col-lg-4">
+                    <div class="index_card text-center">
+                        <div class="row justify-content-center">
+                            <img class="card-img-top img-fluid calendar" src="img/calendar.png" alt="Card image cap">
+                        </div>
+                        <div class="card-body">
+                            <h4 class="card-title text-center">Események</h4>
+                            <p class="index_text card-text">Itt találod a legtöbb jó bulit, böngéssz bátran és keress vagy adj el jegyeket a barátaidnak, vagy más felhasználóknak.</p>
+                            <a href="#" class="btn btn-primary index_btn_card">Események</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col col-md-6 col-lg-4">
+                    <div class="index_card text-center">
+                        <div class="row justify-content-center">
+                            <img class="card-img-top img-fluid calendar" src="img/ticket.png" alt="Card image cap">
+                        </div>
+                        <div class="card-body">
+                            <h4 class="card-title text-center">Jegyek</h4>
+                            <p class="index_text card-text">Ha sietsz, egyből kezdheted a jegyek böngészésével is. Itt is tudsz keresni az esemény neve vagy időpontja alapján.</p>
+                            <a href="#" class="btn btn-primary index_btn_card">Jegyek</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col col-md-8 mx-md-auto col-lg-4">
+                    <div class="index_card text-center col">
+                        <div class="row justify-content-center">
+                            <img class="card-img-top img-fluid calendar" src="img/user.png" alt="Card image cap">
+                        </div>
+                        <div class="card-body">
+                            <h4 class="card-title">Regisztráció</h4>
+                            <p class="index_text card-text">Még nem regisztráltál? Akkor gyorsan tedd meg, mert a szolgáltatás csak tagonkak elérhető. Sőt, az újak értékes ajándékot kapnak tőlünk.</p>
+                            <a href="regisztracio.html" class="btn btn-primary index_btn_card">Regisztráció</a>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
     </div>
 </div>
+    <!-- footer -->   
 
-<!-- footer -->
+        <footer class="bg-light text-center py-3 sticky-bottom">
+            <div class="container">
+            <p class="m-0">&copy; Company 2017</p>
+            </div>
+        </footer> 
 
-<footer class="bg-light text-center py-3 sticky-bottom">
-    <div class="container">
-        <p class="m-0">&copy; Company 2017</p>
-    </div>
-</footer>
+            
 
-
-<!-- Bootstrap core JavaScript
-================================================== -->
-<!-- Placed at the end of the document so the pages load faster -->
-<script src="lib/jquery-3.2.1.slim.min.js"></script>
-<script src="lib/popper.min.js"></script>
-<script src="lib/bootstrap/js/bootstrap.min.js"></script>
-</body>
-<!-- style end-->
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="lib/jquery-3.2.1.slim.min.js"></script>
+    <script src="lib/popper.min.js"></script>
+    <script src="lib/bootstrap/js/bootstrap.min.js"></script>
+  </body>
+   <!-- style end-->
 </html>
