Hibajavítás W3C szabványoknak megfelelően.

--- a/jegyek.html
+++ b/jegyek.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="hu">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -93,7 +93,7 @@
 
             <tbody>
                 <tr>   
-                    <td scope="row" data-toggle="tooltip" data-placement="bottom" title="Még 3 napig lehet licitálni, az esemény megtekintéséhez kattints ide"><a href="#">Sziget fesztivál</a></td>
+                    <th scope="row" data-toggle="tooltip" data-placement="bottom" title="Még 3 napig lehet licitálni, az esemény megtekintéséhez kattints ide"><a href="#">Sziget fesztivál</a></th>
                     <td>2018.08.03. 13:00</td>
                     <td>Példa Jóska</td>
                     <td>3db</td>
@@ -101,7 +101,7 @@
                 </tr>
 
                 <tr>   
-                    <td scope="row" data-toggle="tooltip" data-placement="bottom" title="Még 3 napig lehet licitálni, az esemény megtekintéséhez kattints ide"><a href="#">Sziget fesztivál</a></td>
+                    <th scope="row" data-toggle="tooltip" data-placement="bottom" title="Még 3 napig lehet licitálni, az esemény megtekintéséhez kattints ide"><a href="#">Sziget fesztivál</a></th>
                     <td>2018.08.03. 13:00</td>
                     <td>Példa Jóska</td>
                     <td>3db</td>
@@ -109,7 +109,7 @@
                 </tr>
 
                 <tr>   
-                    <td scope="row" data-toggle="tooltip" data-placement="bottom" title="Még 3 napig lehet licitálni, az esemény megtekintéséhez kattints ide"><a href="#">Sziget fesztivál</a></td>
+                    <th scope="row" data-toggle="tooltip" data-placement="bottom" title="Még 3 napig lehet licitálni, az esemény megtekintéséhez kattints ide"><a href="#">Sziget fesztivál</a></th>
                     <td>2018.08.03. 13:00</td>
                     <td>Példa Jóska</td>
                     <td>3db</td>
@@ -117,7 +117,7 @@
                 </tr>
 
                 <tr>   
-                    <td scope="row" data-toggle="tooltip" data-placement="bottom" title="Még 3 napig lehet licitálni, az esemény megtekintéséhez kattints ide"><a href="#">Sziget fesztivál</a></td>
+                    <th scope="row" data-toggle="tooltip" data-placement="bottom" title="Még 3 napig lehet licitálni, az esemény megtekintéséhez kattints ide"><a href="#">Sziget fesztivál</a></th>
                     <td>2018.08.03. 13:00</td>
                     <td>Példa Jóska</td>
                     <td>3db</td>
@@ -125,7 +125,7 @@
                 </tr>
 
                 <tr>   
-                    <td scope="row" data-toggle="tooltip" data-placement="bottom" title="Még 3 napig lehet licitálni, az esemény megtekintéséhez kattints ide"><a href="#">Sziget fesztivál</a></td>
+                    <th scope="row" data-toggle="tooltip" data-placement="bottom" title="Még 3 napig lehet licitálni, az esemény megtekintéséhez kattints ide"><a href="#">Sziget fesztivál</a></th>
                     <td>2018.08.03. 13:00</td>
                     <td>Példa Jóska</td>
                     <td>3db</td>
@@ -133,7 +133,7 @@
                 </tr>
 
                 <tr>   
-                    <td scope="row" data-toggle="tooltip" data-placement="bottom" title="Még 3 napig lehet licitálni, az esemény megtekintéséhez kattints ide"><a href="#">Sziget fesztivál</a></td>
+                    <th scope="row" data-toggle="tooltip" data-placement="bottom" title="Még 3 napig lehet licitálni, az esemény megtekintéséhez kattints ide"><a href="#">Sziget fesztivál</a></th>
                     <td>2018.08.03. 13:00</td>
                     <td>Példa Jóska</td>
                     <td>3db</td>
@@ -141,7 +141,7 @@
                 </tr>
 
                 <tr>   
-                    <td scope="row" data-toggle="tooltip" data-placement="bottom" title="Még 3 napig lehet licitálni, az esemény megtekintéséhez kattints ide"><a href="#">Sziget fesztivál</a></td>
+                    <th scope="row" data-toggle="tooltip" data-placement="bottom" title="Még 3 napig lehet licitálni, az esemény megtekintéséhez kattints ide"><a href="#">Sziget fesztivál</a></th>
                     <td>2018.08.03. 13:00</td>
                     <td>Példa Jóska</td>
                     <td>3db</td>
@@ -149,7 +149,7 @@
                 </tr>
 
                 <tr>   
-                    <td scope="row" data-toggle="tooltip" data-placement="bottom" title="Még 3 napig lehet licitálni, az esemény megtekintéséhez kattints ide"><a href="#">Sziget fesztivál</a></td>
+                    <th scope="row" data-toggle="tooltip" data-placement="bottom" title="Még 3 napig lehet licitálni, az esemény megtekintéséhez kattints ide"><a href="#">Sziget fesztivál</a></th>
                     <td>2018.08.03. 13:00</td>
                     <td >Példa Jóska</td>
                     <td >3db</td>
@@ -157,11 +157,11 @@
                 </tr>
 
                 <tr>   
-                    <td scope="row" data-toggle="tooltip" data-placement="bottom" title="Még 3 napig lehet licitálni, az esemény megtekintéséhez kattints ide"><a href="#">Sziget fesztivál</a></td>
+                    <th scope="row" data-toggle="tooltip" data-placement="bottom" title="Még 3 napig lehet licitálni, az esemény megtekintéséhez kattints ide"><a href="#">Sziget fesztivál</a></th>
                     <td>2018.08.03. 13:00</td>
                     <td>Példa Jóska</td>
                     <td >3db</td>
-                    <td><a href="licit.html">Tovább a licithez</a></td></td>
+                    <td><a href="licit.html">Tovább a licithez</a></td>
                 </tr>
 
             </tbody>
